# Hackathon

./: .gitignore  01-intro.Rmd  02-literature.Rmd  03-method.Rmd  04-application.Rmd  05-summary.Rmd  Differential_Analysis.R  Download.nf  LICENSE  README.md  gustavo.txt  index.Rmd  index.md  main_izem.nf  nextflow.config  nextflow_conda_env.yml  script_STAR.txt
Conda/: env_probinr.yml  env_stream.yml
Data/Genome/: download.sh
Data/Index/: index.sh
Data/Reads/: download.sh  ids.txt  launch-fasterq-dump.sh
Nextflow/: SraRunTable.txt  main.nf  nextflow.config
Nextflow/templates/: differential_analysis.R
Python/: devel.py  pyproject.toml  reader.py  select_vargenes.py
Python/tagi_rnaseq/: normalization.py  parsing.py
R/: DeSEQ.R  SraRunTable.txt  differential_expression.R
docs/: applications.html  bookdown-demo.epub  bookdown-demo.tex  caveats.html  dependencies.html  execution.html  final-words.html  index.html  parameters.html  reference-keys.txt  references.html  search_index.json  workflow-dag.html  workflow.html
