[tool.poetry]
name = "tagi_rnaseq"
version = "0.1.0"
description = "RNA-seq analysis tools"
authors = ["bio-TAGI <0mua6xvcm@relay.firefox.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
numpy = {version = "^1.21.4", python = ">=3.8,<3.10"}
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pylint = "^2.11.1"
black = "^21.11b1"
ipython = "^7.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
